--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=MyGame
 application.vendor=MyCompany
 assets.jar.name=assets.jar
@@ -27,16 +31,22 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Jama-1.0.2.jar=Jama-1.0.2.jar
 file.reference.KinectTCPClient.jar=KinectTCPClient.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
-    ${file.reference.KinectTCPClient.jar}
+    ${file.reference.KinectTCPClient.jar}:\
+    ${file.reference.Jama-1.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -57,11 +67,16 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=local
 jnlp.descriptor=application
 jnlp.enabled=false
+jnlp.mixed.code=default
 jnlp.offline-allowed=false
 jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=mygame.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
